# rustmxjulio2019

./: README.md
arrow00/: Cargo.toml
arrow00/data/csv/: aggregate_test_100.csv  archivo.csv
arrow00/src/: main.rs
arrow01/: Cargo.toml
arrow01/data/csv/: .history  csv01.csv  csv02.csv
arrow01/src/: main.rs
arrow02/: Cargo.toml  README.md  mexmen.csv  query01.sql
arrow02/src/: main.rs  repl.rs
efflux00/: Cargo.toml
parquet00/: Cargo.toml
parquet00/src/: main.rs
