[package]
name = "datafusion-cli"
version = "0.1.0"
authors = ["gusdelact"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "0.14.0"
datafusion = "0.14.0"
clap = "2.33.0"
prettytable-rs = "0.8.0"
rustyline =  "4.1.0"
